# iSPEED

./: .gitignore  LICENSE  LICENSE.md  README.md  dockerfile
data/: nuclei.off  vessels.off
docker-hadoop/: Makefile  build-image.sh  docker-compose.full.yml  docker-compose.yml  hadoop.env  remove_images.sh
docker-hadoop/base/: Dockerfile
docker-hadoop/datanode/: Dockerfile
docker-hadoop/historyserver/: Dockerfile
docker-hadoop/namenode/: Dockerfile
docker-hadoop/nodemanager/: Dockerfile
docker-hadoop/resourcemanager/: Dockerfile  run.sh
docker-hadoop/submit/: Dockerfile
installer/: README.md  listdependencies
installer/dependencies/: rhel_install_cgal.sh
script/: clean.sh  runcombiner.sh  runtest.sh  runtest_nn.sh  testSPJoins.sh
src/: makefile
src/PPMC/: CMakeLists.txt  README  compress_combine.cpp  compress_load.cpp  compressionsupport.hpp  configuration.h  frenetRotation.cpp  frenetRotation.h  mymesh.cpp  mymesh.h  mymeshAdaptiveQuantization.cpp  mymeshBaseBuilder.h  mymeshComp.cpp  mymeshCompTests.cpp  mymeshDecomp.cpp  mymeshDecomp.cppbackup  mymeshIO.cpp  mymeshLifting.cpp  mymeshUtils.cpp  mymeshfunctions.hpp  ppmc.cpp  ppmc.h  ppmc.hpp
src/PPMC/rangeCoder/: qsmodel.c  qsmodel.h  rangecod.c  rangecod.h
src/compression/: compress_combine.cpp  compress_load.cpp  ppmc.cpp  ppmc.h
src/framework/: query_spjoin_3d.hpp  queryprocessor_3d.cpp  queryprocessor_3d.hpp
src/indices/: rtree_builder_3d.hpp
src/mapreducecpp/: mapreduce_cpp.cpp  mapreduce_cpp.hpp  mapreduce_cpp.hpp~
src/progparams/: global_define.h  partition_datastructs_3d.hpp  (+9 more)
(+20 files in other folders)
